GH-71 Update history repository
